--- a/customer_signup.html
+++ b/customer_signup.html
@@ -1,4 +1,3 @@
-10:11PM
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -124,6 +123,7 @@
     <script>
         // Define initMap globally as it's the callback for the Google Maps API script
         function initMap() {
+            console.log("initMap called. Google Maps API and Places library should be available.");
             // --- Address Handling Elements ---
             const addressLine1Input = document.getElementById('address-line1');
             const addressLine2Input = document.getElementById('address-line2');
