--- a/customer_signup.html
+++ b/customer_signup.html
@@ -7,8 +7,8 @@
     <!-- For production, it's better to install Tailwind CSS via npm -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Google Maps API: Now includes 'places' for Autocomplete and 'v=beta' for new Places API features -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB133ISKHPtat18iloHDlqm2QHBv133sOk&libraries=places&callback=initMap&loading=async&v=beta"></script>
+    <!-- Google Maps API: Now includes 'places' for Autocomplete. Removed 'v=beta' as Places API (New) is official. -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB133ISKHPtat18iloHDlqm2QHBv133sOk&libraries=places&callback=initMap&loading=async"></script>
 
     <style>
         body { font-family: 'Inter', sans-serif; }
